--- a/udongmarket/src/main/webapp/html.html
+++ b/udongmarket/src/main/webapp/html.html
@@ -17,11 +17,15 @@
     		 scope:'profile_nickname,account_email',
     		 success: function(authObj) {
     			 console.log(authObj);
+    			 
     			 window.Kakao.API.request({
     				 url:'/v2/user/me',
     				 success: res => {
     					 const kakao_account = res.kakao_account;
     					 console.log(kakao_account);
+    				 },
+    				 fail: err => {
+    					 console.log(err);
     				 }
     			 });
     		 } 
